[gd_scene load_steps=5 format=2]

[ext_resource path="res://Card/icon.png" type="Texture" id=1]
[ext_resource path="res://Card/Card.gd" type="Script" id=2]
[ext_resource path="res://Card/CardBorder.shader" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/circle_radius = 1.0
shader_param/border_thickness = 0.0
shader_param/border_smoothing_distance = 0.2
shader_param/border_color = Color( 1, 0, 0, 1 )

[node name="Card" type="TextureRect"]
material = SubResource( 1 )
margin_right = 50.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 5
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
border_color = Color( 0.870588, 0.870588, 0.870588, 0.443137 )
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_hover"]
[connection signal="mouse_exited" from="." to="." method="_on_hover_exit"]
